Fixed a lot of datagen besides BlockTagProvider